--- a/src/components/Socials.css
+++ b/src/components/Socials.css
@@ -1,12 +1,14 @@
 .socials {
     background-color: #111;
     color: white;
-    padding: 120px 60px;
+    padding: 60px 60px;
+    /* Reduced from 120px */
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
+    /* Align items to the bottom */
     position: relative;
-    overflow: visible;
+    overflow:
 }
 
 /* Left side */
@@ -36,6 +38,7 @@
     border-radius: 50%;
     transition: 0.3s ease;
     cursor: pointer;
+    color: white;
 }
 
 .icons i:hover {
@@ -44,22 +47,24 @@
     color: #000;
 }
 
+
 /* Right side image */
 .socials-right {
     width: 50%;
     display: flex;
     justify-content: flex-end;
+    align-items: flex-end;
+    /* Stick phone to the bottom */
 }
 
-/* Floating phone image */
 .phone-img {
-    width: 360px;
-    position: relative;
-    top: -70px;
-    /* lifts the image ABOVE the black container */
-    right: 0;
-    z-index: 2;
+    width: 300px;
+    position: absolute;
+    bottom: -40px;
+    right: 60px;
 }
+
+
 
 /* -------- Responsive -------- */
 @media (max-width: 900px) {
